# graph-layout

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  REVIEW.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  wheels.yml
benchmarks/: README.md  compare_ogdf.py
benchmarks/graphs/: grid_medium.csv  grid_small.csv  grid_small.gml  index.json  large_random.gml  large_scalefree.json  large_smallworld.gml  large_smallworld.graphml  medium_random.csv  medium_random.graphml  medium_scalefree.graphml  medium_smallworld.graphml  small_scalefree.graphml  xlarge_random.gml  xlarge_random.graphml  xlarge_random.json  xlarge_scalefree.json
docs/: BUILD_SYSTEM.md  OPTIMIZATION_ANALYSIS.md  PERFORMANCE_COMPARISON.md  TRANSLATION_GUIDE.md  algorithms-guide.md  kandinsky-implementation-plan.md  preprocessing-guide.md  rectangularization-plan.md
docs/dev/: correctness-review.md
scripts/: benchmark_layouts.py  generate_benchmark_graphs.py  profile_bipartite.py  profile_kandinsky.py  profile_layout.py  showcase.py  visualize.py
src/graph_layout/: __init__.py  _speedups.pxd  _speedups.pyx  base.py  metrics.py  preprocessing.py  types.py  validation.py
src/graph_layout/basic/: __init__.py  random.py
src/graph_layout/bipartite/: __init__.py  bipartite.py
src/graph_layout/circular/: __init__.py  circular.py  shell.py
src/graph_layout/cola/: __init__.py  _pqueue_cy.c  _shortestpaths_cy.c  _shortestpaths_py.py  adapter.py  batch.py  descent.py  geom.py  gridrouter.py  handledisconnected.py  layout.py  layout3d.py  linklengths.py  powergraph.py  pqueue.py  rbtree.py  rectangle.py  shortestpaths.py  vpsc.py
src/graph_layout/export/: __init__.py  dot.py  graphml.py  svg.py
src/graph_layout/force/: __init__.py  force_atlas2.py  fruchterman_reingold.py  kamada_kawai.py  smacof.py  spring.py  yifan_hu.py
src/graph_layout/hierarchical/: __init__.py  _brandes_koepf.py  radial_tree.py  reingold_tilford.py  sugiyama.py
src/graph_layout/orthogonal/: __init__.py  _min_cost_flow.py  compaction.py  compaction_flow.py  compaction_ilp.py  edge_routing.py  expansion.py  giotto.py  kandinsky.py  metrics.py  orthogonalization.py  planarization.py  realization.py  types.py
src/graph_layout/planar/: __init__.py  _shared.py  fpp.py  mixed_model.py  planarization.py  schnyder.py  tutte.py
src/graph_layout/planarity/: __init__.py  _block_cut_tree.py  _embedding.py  _lr_planarity.py  _types.py  embedders.py
src/graph_layout/spatial/: __init__.py  quadtree.py
src/graph_layout/spectral/: __init__.py  spectral.py
tests/: _ogdf_oracle.py  test_batch.py  test_bipartite.py  test_brandes_koepf.py  test_circular_layouts.py  test_cola_adapter.py  test_compaction.py  test_compaction_flow.py  test_descent.py  test_edge_routing.py  test_embedders.py  test_exhaustive_oracle.py  test_export.py  test_face_computation.py  test_force_atlas2.py  test_force_layouts.py  test_geom.py  test_giotto_bend_optimal.py  test_gridrouter.py  test_handledisconnected.py  test_hierarchical_layouts.py  test_kandinsky.py  test_kandinsky_bend_optimal.py  test_kuratowski.py  test_layout.py  test_layout3d.py  test_linklengths.py  test_metrics.py  test_min_cost_flow.py  test_ogdf_oracle.py  test_orthogonal_disconnected.py  test_orthogonal_metrics.py  test_orthogonal_properties.py  test_planar_straightline.py  test_planarity.py  test_planarity_regression.py  test_planarization.py  test_powergraph.py  test_pqueue.py  test_preprocessing.py  (+12 more)
tests/benchmarks/: README.md  compare_ogdf.py
tests/benchmarks/graphs/: grid_medium.gml  grid_medium.graphml  grid_medium.json  grid_small.graphml  grid_small.json  large_random.csv  large_random.graphml  large_random.json  large_scalefree.csv  large_scalefree.gml  large_scalefree.graphml  large_smallworld.csv  large_smallworld.json  medium_random.gml  medium_random.json  medium_scalefree.csv  medium_scalefree.gml  medium_scalefree.json  medium_smallworld.csv  medium_smallworld.gml  medium_smallworld.json  small_random.csv  small_random.gml  small_random.graphml  small_random.json  small_scalefree.csv  small_scalefree.gml  small_scalefree.json  xlarge_random.csv  xlarge_scalefree.csv  xlarge_scalefree.gml  xlarge_scalefree.graphml
tests/demos/: improvements_showcase.py  orgchart_showcase.py  showcase.py  social_network_showcase.py  state_machine_showcase.py
